<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtcal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.0"
            android:gravity="center_vertical|left"
            android:textSize="28sp"
            tools:text="2000" />

        <TextView

            android:id="@+id/resalayt"
            android:layout_width="60dp"
            android:layout_height="9dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.2"
            android:gravity="center_vertical|left"
            android:text="+"
            android:textSize="28sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:stretchColumns="*">


        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn1"
                android:layout_margin="1dp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/btn2"
                android:layout_margin="1dp"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn3"
                android:layout_margin="1dp"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_clear"
                android:text="@string/c"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/btncal4"
                android:layout_margin="1dp"
                android:text="4"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/btncal5"
                android:layout_margin="1dp"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btncal6"
                android:layout_margin="1dp"
                android:text="@string/_6"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnalplas"
                android:text="@string/p"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/cal7"
                android:layout_margin="1dp"
                android:text="7"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/cal8"
                android:layout_margin="1dp"
                android:text="@string/_8"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/cal9"
                android:layout_margin="1dp"
                android:text="@string/_9"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btm_mimez"
                android:text="@string/m"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/b0"
                android:layout_margin="1dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle,HardcodedText" />

            <Button
                android:id="@+id/mu_eqoal"
                android:layout_margin="1dp"
                android:text="@string/o"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/s_ta"
                android:layout_margin="1dp"
                android:text="@string/tas"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/bnm_zarb"
                android:text="@string/aq"
                android:textColor="@color/black"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>
</LinearLayout>